
0.0.0 - primary branch
0.1.0 - primary branch 
master - gets deployed (hm...)

0.0.11 - current development, super goodlooking with square bg
0.1.1 - development of Industry theme
1.x.x - this

2.0.0 - industry theme in React
2.0.2 - it begins to appear the way I want it.
2.0.3 - fucked up
2.0.4 - fucked up
2.0.5 - like 2.0.2, works well, but single-page.
2.0.6 - cleaner, smaller images
2.0.7 - introducing stripe
2.0.8 - working on a better-mobile footer
        fixed minor responsive stuff, all good
2.0.9 - let's wire in blog
        and increased team size to 6
        our-process is in
        lets wire in our-clients
2.0.10 - lets wire in foundation email inky
         calendly is in
2.0.11 - lock to bootstrap 3.3.7
         20180226 changing team
         blog is only index, each blog item is one page.
2.0.12 - case studies and articles; different banner.
         casio batista is in; victor resume is 201805 version.
	       20180503 with vim, scrollTo fixed, navigation collapse fixed. 
2.0.13 - adding path /contact
